@@ -12,8 +12,8 @@ AC_PROG_INTLTOOL([0.21])
 
 dnl ================= Requirements ================================================
 
-VTE_REQUIRED=0.8.19
-GTK_REQUIRED=2.12.0
+VTE_REQUIRED=0.17.1
+GTK_REQUIRED=2.14.0
 GLIB_REQUIRED=2.12.0
 GTKSOURCEVIEW_REQUIRED=0.3.0
 GTKSOURCEVIEW2_REQUIRED=2.0.2
