@@ -982,10 +982,10 @@ func=1;start=2;inc=3;round(100*InfiniteSum(`(n)=inc-func-start+2^(-n),1,1))	100
 [0,I(2);0]							[0,1,0;0,0,1;0,0,0]
 [0,I(2);null;1,2,3]						[0,1,0,0;0,0,1,0;1,2,2,3]
 [0,I(2);null;0,0,0]						[0,1,0,0;0,0,1,0;0,0,0,0]
-AuxilliaryUnitMatrix(3)						[0,1,0;0,0,1;0,0,0]
-AuxilliaryUnitMatrix(4)						[0,1,0,0;0,0,1,0;0,0,0,1;0,0,0,0]
+AuxiliaryUnitMatrix(3)						[0,1,0;0,0,1;0,0,0]
+AuxiliaryUnitMatrix(4)						[0,1,0,0;0,0,1,0;0,0,0,1;0,0,0,0]
 J(4,2)								[2,1,0,0;0,2,1,0;0,0,2,1;0,0,0,2]
-J(10,0)==AuxilliaryUnitMatrix (10)				true
+J(10,0)==AuxiliaryUnitMatrix (10)				true
 [1,2,3;4,5;6]							[1,2,3;4,5,0;6,0,0]
 a=[1,2,3;4,5,6;7,8,9];[a,10;11,12]				[1,2,3,10;4,5,6,10;7,8,9,10;11,11,11,12]
 null==1								false
