@@ -12,8 +12,12 @@ Changes to 1.0.10
   out)
 * Fix some crashes in plotting code
 * Allow slopefield solutions to leave plot window by a small fudge factor.
+* Fix zooming plots so that we can zoom by moving mouse in any direction
 * Fix compilation with newer sealed vte (Vincent Untz)
 * Fix up some typos in the documentation (Christian Kirbach, me)
+* Translation updates (Christian Kirbach, Jorge González, Andrej Žnidaršič,
+  Kjartan Maraas, Petr Kovar, Mario Blättermann, Fran Diéguez, Matej Urbančič,
+  Andrej Žnidaršič, Marek Černocký, me)
 
 * For some of the changes the author (Jiri) was partially supported by
   NSF grant DMS 0900885 and the University of Illinois at Urbana-Champaign
